--- a/src/app/features/modals/remote-management/quick-add-remote/quick-add-remote.component.html
+++ b/src/app/features/modals/remote-management/quick-add-remote/quick-add-remote.component.html
@@ -19,7 +19,7 @@
             <!-- Remote Type Selection -->
             <div class="section-group">
               <h3 class="section-label">{{ 'modals.quickAdd.selectType' | translate }}</h3>
-              <mat-form-field appearance="fill" class="full-width remote-type-field">
+              <mat-form-field appearance="fill" class="remote-type-field">
                 <mat-label>{{ 'modals.quickAdd.searchLabel' | translate }}</mat-label>
                 <mat-icon matPrefix svgIcon="server" class="field-icon"></mat-icon>
                 <input
@@ -64,7 +64,7 @@
             <!-- Configuration Section -->
             <div class="section-group config-section">
               <div class="form-row">
-                <mat-form-field appearance="fill" class="full-width">
+                <mat-form-field appearance="fill">
                   <mat-label>{{ 'modals.quickAdd.remoteName' | translate }}</mat-label>
                   <mat-icon matPrefix svgIcon="cloud" class="field-icon"></mat-icon>
                   <input
