--- a/src/app/features/modals/settings/backend-modal/backend-modal.component.html
+++ b/src/app/features/modals/settings/backend-modal/backend-modal.component.html
@@ -186,7 +186,7 @@
                 </div>
 
                 <div class="config-path-group">
-                  <mat-form-field appearance="fill" class="full-width">
+                  <mat-form-field appearance="fill">
                     <mat-label>{{ 'modals.backend.configPath' | translate }}</mat-label>
                     <mat-icon matPrefix svgIcon="file-lines"></mat-icon>
                     <input
@@ -350,7 +350,7 @@
           </mat-form-field>
 
           <div class="config-path-group">
-            <mat-form-field appearance="fill" class="full-width">
+            <mat-form-field appearance="fill">
               <mat-label>{{ 'modals.backend.configPath' | translate }}</mat-label>
               <mat-icon matPrefix svgIcon="file-lines"></mat-icon>
               <input
